<resources>
    <string name="app_name">돈에이션</string>
    <string name="settings_profile_edit">프로필 변경</string>
    <string name="settings_open_source">오픈소스 약관</string>
    <string name="settings_terms_of_service">이용약관</string>
    <string name="settings_notification">알림</string>
    <string name="settings_inquiry">문의하기</string>
    <string name="settings_my_account">내 계좌</string>
    <string name="notification_title">돈에이션</string>
    <string name="notification_channel_id">donation</string>
    <string name="notification_channel_name">donation</string>
    <string name="facebook_app_id">770264156924576</string>
    <string name="fb_login_protocol_scheme">fb770264156924576</string>
    <string name="profile_modify">수정</string>
    <string name="profile_setting">설정</string>
    <string name="profile_point">보유 포인트</string>
    <string name="profile_charge">충전하기</string>
    <string name="profile_donation_summary_status">현황</string>
    <string name="profile_donation_summary_request">내가 받는</string>
    <string name="profile_donation_summary_donated">내가 주는</string>
    <string name="profile_donation_summary_closed">종료</string>
    <string name="account_number_account_number">110–436–3412421 신한은행</string>
    <string name="account_number_account_number_text">%1$s으로 %2$s원을 보내주세요.</string>
    <string name="clip_success_text">복사됐습니다.</string>
    <string name="clip_failure_text">복사에 실패하였습니다.</string>
    <string name="account_number_description">충전이 완료되면 연락드릴게요</string>
    <string name="sign_up_title">회원 가입</string>
    <string name="sign_up_nickname_hint">닉네임</string>
    <string name="sign_up_cell_phone_hint">전화번호</string>
    <string name="sign_up_email_hint">이메일</string>
    <string name="sign_up_agree_text">약관 동의</string>
    <string name="sign_up_agree_detail_text">약관 상세</string>
    <string name="sign_up_usage_policy">이용약관</string>
    <string name="sign_up_personal_information_policy">개인정보 수집 및 이용</string>
    <string name="sign_up_policy">%1$s, %2$s에 모두 동의 합니다.</string>
    <string name="sign_up_complete">가입완료</string>
    <string name="usage_policy_url">https://www.notion.so/26c36382cd8448188c7532519b9019cc</string>
    <string name="personal_information_policy_url">https://www.notion.so/b384c72d60cc4475af49284625f81a0e</string>
    <string name="charge_complete_title">%s\n충전완료</string>
    <string name="charge_price">%,d원</string>
    <string name="donation">후원</string>
    <string name="donation_hint">후원할 금액을 입력하세요.</string>
    <string name="donate">후원하기</string>
    <string name="create_donation_title">도네이션 생성</string>
    <string name="create_donation_product_name_hint">가지고 싶은 물건 이름은?</string>
    <string name="create_donation_description_hint">하고 싶은 말</string>
    <string name="create_donation_price_hint">얼마를 모아볼까요?</string>
    <string name="create_donation_start_date_hint">시작 날짜를 선택해 주세요</string>
    <string name="create_donation_due_date_hint">종료 날짜를 선택해주세요</string>
    <string name="create_donation_goal_hint">도네 목표 (가격)</string>
    <string name="create_donation_complete">생성완료</string>
    <string name="create_donation_complete_product">%s 가지고싶다</string>
    <string name="create_donation_complete_title">%s\n생성완료</string>
    <string name="create_donation_share_button">공유하기</string>
    <string name="main_my_donation_title">나의 진행</string>
    <string name="google_login">Google로 로그인하기</string>
    <string name="facebook_login">Facebook으로 로그인하기</string>
    <string name="charging">충전</string>
    <string name="charging_hint">충전할 금액을 입력하세요.</string>
    <string name="charge">충전하기</string>
    <string name="charge_1">1,000원</string>
    <string name="charge_2">2,000원</string>
    <string name="charge_5">5,000원</string>
    <string name="charge_10">10,000원</string>
    <string name="charge_50">50,000원</string>
    <string name="charge_100">100,000원</string>
    <string name="write_direct">직접입력</string>
    <string name="sign_in_error_message">로그인에 실패하였습니다. 다시 시도해 주세요.</string>
    <string name="sign_up_error_check_personal_policy">개인 정보 수집 및 동의를 체크해 주세요.</string>
    <string name="sign_up_error_sns">SNS 로그인에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="sign_up_error_empty_nickname">NickName을 적어주세요</string>
    <string name="open_source_url">https://www.notion.so/Android-Library-49bbbacaf24349a882f6051a2e704d1a</string>
    <string name="inquiry_email">mobal.mashup@gmail.com</string>
    <string name="donation_detail_goal_price">목표 금액</string>
    <string name="donation_detail_current_price">모금 금액</string>
    <string name="donation_detail_donator">참여자 (%d)</string>
    <string name="donation_detail_donator_empty">참여자</string>
    <string name="donation_detail_end_date">종료날짜</string>
    <string name="donation_detail_funding">%s 에게 펀딩하기</string>
    <string name="donation_detail_title">%1s 는\n%2s 가지고 싶어요</string>
    <string name="donation_price">%,d</string>
    <string name="donation_percent">%.1f%%</string>
    <string name="main_user_name">Hi, %s</string>
    <string name="void_description">description이 비었습니다.</string>
    <string name="void_product_name">productName이 비었습니다.</string>
    <string name="void_post_image">이미지 uri가 비었습니다.</string>
    <string name="void_fund_amount">fundAmount가 비었습니다.</string>
    <string name="void_start_date">startDate가 비었습니다.</string>
    <string name="void_due_date">dueDate가 비었습니다.</string>
    <string name="donate_error_message">후원하기에 실패하였습니다. 다시 시도해 주세요.</string>
    <string name="donate_error_post_id">올바른 경로가 아닙니다. 다시 시도해 주세요.</string>
    <string name="charge_hint">충전할 금액을 입력하세요.</string>
    <string name="charge_error_user_name">올바른 경로가 아닙니다. 다시 시도해 주세요.</string>
    <string name="charge_error_message">충전하기에 실패하였습니다. 다시 시도해 주세요.</string>
    <string name="donate_success_message">성공적으로 후원에 성공하였습니다.</string>
    <string name="profile_user_point">%d원</string>
    <string name="profile_header_donation_summary">내 도네</string>
    <string name="profile_header_donation_request">내가 연 도네</string>
    <string name="profile_header_donated">후원중인 도네</string>
    <string name="profile_header_donation_closed">종료된 도네</string>
</resources>