<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bottom_sheet_gray">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/donation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/bottom_sheet_charge_1000"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginTop="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/charge_1"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_charge_2000"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_charge_1000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/charge_2"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_charge_5000"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_charge_2000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/charge_5"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_charge_10000"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_charge_5000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/charge_10"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_charge_50000"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_charge_10000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/charge_50"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_charge_100000"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_charge_50000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/charge_100"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_charge_writing"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bottom_sheet_charge_100000">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="21dp"
            android:text="@string/write_direct"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_arrow_chevron_big_right"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>