<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="120dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:backgroundTint="@color/gray_c4">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/profile_donation_summary_status"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="54dp" />

            <TextView
                android:id="@+id/tv_request_donation_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummaryCount"
                app:layout_constraintEnd_toStartOf="@id/tv_donated_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guide_start"
                tools:text="1" />

            <TextView
                android:id="@+id/tv_request_donation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/profile_donation_summary_request"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummary"
                app:layout_constraintEnd_toEndOf="@id/tv_request_donation_count"
                app:layout_constraintStart_toStartOf="@id/tv_request_donation_count"
                app:layout_constraintTop_toBottomOf="@id/tv_request_donation_count" />

            <TextView
                android:id="@+id/tv_donated_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummaryCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/guide_start"
                tools:text="2" />

            <TextView
                android:id="@+id/tv_donated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/profile_donation_summary_donated"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummary"
                app:layout_constraintEnd_toEndOf="@id/tv_donated_count"
                app:layout_constraintStart_toStartOf="@id/tv_donated_count"
                app:layout_constraintTop_toBottomOf="@id/tv_donated_count" />

            <TextView
                android:id="@+id/tv_closed_donation_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummaryCount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_donated_count"
                app:layout_constraintTop_toTopOf="@id/guide_start"
                tools:text="3" />

            <TextView
                android:id="@+id/tv_closed_donation"
                android:layout_width="33dp"
                android:layout_height="23dp"
                android:layout_marginTop="6dp"
                android:text="@string/profile_donation_summary_closed"
                android:textAppearance="@style/ModalComponent.ProfileDonationSummary"
                app:layout_constraintEnd_toEndOf="@id/tv_closed_donation_count"
                app:layout_constraintStart_toStartOf="@id/tv_closed_donation_count"
                app:layout_constraintTop_toBottomOf="@id/tv_closed_donation_count" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>